--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.6
   shared_preferences: ^2.2.2
+  flutter_ringtone_player: ^4.0.0+3
 
 dev_dependencies:
   flutter_test:
