--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_ringtone_player: ^4.0.0+3
   stop_watch_timer: ^3.2.1
+  flutter_native_splash: ^2.3.11
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -25,4 +27,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/logo.png
 
